# Async_API_sprint_2

./: .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.nginx.yaml  docker-compose.yaml
etl/: .env.sample  (+2 more)
fastapi-solution/: .dockerignore  .env.sample  Dockerfile  pyproject.toml  requirements.txt
fastapi-solution/src/command/app/: main.py
fastapi-solution/src/content_api/command/app/: main.py
fastapi-solution/src/content_api/internal/infrastructure/: app_config.py  auth_client.py  circuit_breaker.py  logger.py  telemetry.py
fastapi-solution/src/content_api/internal/pkg/: domain.py  errors.py  pagination.py
fastapi-solution/src/content_api/internal/ports/output/: auth_verifier.py  cache.py  films_repository.py  genres_repository.py  logger.py  persons_repository.py
fastapi-solution/src/internal/infrastructure/: app_config.py  config.py  exception_handlers.py  redis.py
fastapi-solution/src/internal/pkg/: errors.py
fastapi-solution/src/internal/ports/: films_repository.py  genres_repository.py  persons_repository.py
fastapi-solution/src/internal/ports/output/: films_repository.py  genres_repository.py  persons_repository.py
fastapi-solution/tests/: conftest.py
fastapi-solution/tests/functional/: conftest.py
fastapi-solution/tests/functional/src/v1/: test_cache.py  test_film.py  test_genre.py  test_person.py
fastapi-solution/tests/functional/testdata/: films_data.py  genres_data.py  persons_data.py
fastapi-solution/tests/testdata/: films_data.py  genres_data.py
fastapi-solution/tests/unit/src/: test_film_usercase.py
(+78 files in other folders)
